tests/test_proof/bad/output/no_vars-empty.catala_en.Proof
[RESULT] No two exceptions to ever overlap for variable A.y
[ERROR] Variable A.y might return an empty error
 --> tests/test_proof/bad/no_vars-empty.catala_en
  | 
7 |   context y content integer
  |           ^
  + Test
[RESULT] No two exceptions to ever overlap for variable A.x
[RESULT] Variable A.x never returns an empty error
